update cron
